анкорные ссылки, доскроллы (секции, футер, хедер, мобальное меню)

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                     <nav class="header__menu">
                         <ul class="header__menu-list">
                             <li class="header__menu-item">
-                                <a class="header__menu-link is-active" href="javascript:void(0);">Расчёт стоимости </a>
+                                <a class="header__menu-link " href="#transportation-cost">Расчёт стоимости </a>
                             </li>
                             <li class="header__menu-item">
-                                <a class="header__menu-link" href="javascript:void(0);">Преимущества</a>
+                                <a class="header__menu-link" href="#about">Преимущества</a>
                             </li>
                             <li class="header__menu-item">
-                                <a class="header__menu-link" href="javascript:void(0);">Какие грузы</a>
+                                <a class="header__menu-link" href="#cargo-types">Какие грузы</a>
                             </li>
                             <li class="header__menu-item">
-                                <a class="header__menu-link" href="javascript:void(0);">Отзывы</a>
+                                <a class="header__menu-link" href="#reviews">Отзывы</a>
                             </li>
                             <li class="header__menu-item">
-                                <a class="header__menu-link" href="javascript:void(0);">Как мы работаем</a>
+                                <a class="header__menu-link" href="#process">Как мы работаем</a>
                             </li>
                         </ul>
                     </nav>
@@ -66,27 +66,27 @@
                 <nav class="menu-mob__nav">
                     <ul class="menu-mob__list">
                         <li class="menu-mob__item">
-                            <a href="javascript:void(0);" class="menu-mob__link">
+                            <a href="#transportation-cost" class="menu-mob__link">
                                 Расчёт стоимости<span class="icon icon--right-arrow"> </span>
                             </a>
                         </li>
                         <li class="menu-mob__item">
-                            <a href="javascript:void(0);" class="menu-mob__link">
+                            <a href="#about" class="menu-mob__link">
                                 Преимущества <span class="icon icon--right-arrow"> </span>
                             </a>
                         </li>
                         <li class="menu-mob__item">
-                            <a href="javascript:void(0);" class="menu-mob__link">
+                            <a href="#cargo-types" class="menu-mob__link">
                                 Какие грузы<span class="icon icon--right-arrow"> </span>
                             </a>
                         </li>
                         <li class="menu-mob__item">
-                            <a href="javascript:void(0);" class="menu-mob__link">
+                            <a href="#reviews" class="menu-mob__link">
                                 Отзывы<span class="icon icon--right-arrow"> </span>
                             </a>
                         </li>
                         <li class="menu-mob__item">
-                            <a href="javascript:void(0);" class="menu-mob__link">
+                            <a href="#process" class="menu-mob__link">
                                 Как мы работаем<span class="icon icon--right-arrow"> </span>
                             </a>
                         </li>
@@ -130,7 +130,7 @@
                         <p class="hero__subtitle desc">Организация доставки в&nbsp;любую точку России
                             и&nbsp;за&nbsp;рубеж&nbsp;&mdash; быстро, безопасно и&nbsp;без лишних затрат</p>
                     </div>
-                    <a href="javascript:void(0);" class="button button-calc">Расчёт стоимости <span
+                    <a href="#transportation-cost" class="button button-calc">Расчёт стоимости <span
                             class="icon icon--right-arrow"> <span>
                     </a>
                 </div>
@@ -145,7 +145,7 @@
         </section>
         <!--—END SECTION HERO-->
         <!--—BEGIN SECTION COST OF TRANSPORTATION-->
-        <section class="transportation-cost">
+        <section class="section transportation-cost" id="transportation-cost">
             <div class=" transportation-cost__wrap container">
                 <h2 class="h2 header-block-on">
                     <span>Рассчитайте</span> <br>
@@ -423,7 +423,7 @@
         </section>
         <!--—END SECTION COST OF TRANSPORTATION-->
         <!--—BEGIN ABOUT US SECTION-->
-        <section class="section about">
+        <section class="section about" id="about">
             <div class="about__inner container">
                 <div class="about__header header-block">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
@@ -482,7 +482,7 @@
         </section>
         <!--—END ABOUT US SECTION-->
         <!-- BEGIN SECTION CARGO TYPES -->
-        <section class="section cargo-types">
+        <section class="section cargo-types" id="cargo-types">
             <div class="cargo-types__inner container">
                 <div class="cargo-types__header header-block">
                     <h2 class="cargo-types__title h2"> Ваш груз — <span>наш приоритет</span> </h2>
@@ -856,7 +856,7 @@
         </section>
         <!--—END SECTION SECTION OUR CLIENTS-->
         <!--—BEGINN SECTION REVIEWS-->
-        <section class="section reviews">
+        <section class="section reviews" id="reviews">
             <h2 class="visually-hidden">Отзывы клиентов</h2>
             <div class="reviews__wrap container">
                 <div class="swiper reviews__swiper">
@@ -879,7 +879,7 @@
                                         пропусками возникли накладки в доставке грузов. И благодаря компании JAR-CARGO
                                         наш груз прибыл в кратчайшие сроки.
                                     </blockquote>
-                                    <a class="button button-calc" href="javascript:void(0);">
+                                    <a class="button button-calc" href="#transportation-cost">
                                         Расчёт стоимости <span class="icon icon--right-arrow"></span>
                                     </a>
                                 </div>
@@ -903,7 +903,7 @@
                                         дольше всех сохраняет неизменные условия доставки при достаточно высоком
                                         качестве сервиса.
                                     </blockquote>
-                                    <a class="button button-calc" href="javascript:void(0);">
+                                    <a class="button button-calc" href="#transportation-cost">
                                         Расчёт стоимости <span class="icon icon--right-arrow"></span>
                                     </a>
                                 </div>
@@ -927,7 +927,7 @@
                                         глубочайшее уважение к ответственным сотрудникам вашей компании, желаем вам
                                         только увеличивать влияние на нашем рынке.
                                     </blockquote>
-                                    <a class="button button-calc" href="javascript:void(0);">
+                                    <a class="button button-calc" href="#transportation-cost">
                                         Расчёт стоимости <span class="icon icon--right-arrow"></span>
                                     </a>
                                 </div>
@@ -1140,7 +1140,7 @@
         </section>
         <!--—END SECTION WORK PROCESS-->
         <!--—BEGIN SECTION PROCESS-->
-        <section class="section process">
+        <section class="section process" id="process">
             <div class="process__inner container">
                 <h2 class="h2 header-block-on">
                     Оставляйте заявку.<br>
@@ -1194,8 +1194,8 @@
                 <div class="banner__inner container">
                     <h2 class="banner__title">Доставляем грузы точно в&nbsp;срок, <span> ваш успех начинается
                             с&nbsp;нас!</span> </h2>
-                    <a class="button button-calc" href="javascript:void(0);">
-                        Рассчитать стоимость <span class="icon icon--right-arrow"></span>
+                    <a class="button button-calc" href="#transportation-cost">
+                        Расчёт стоимости<span class="icon icon--right-arrow"></span>
                     </a>
                 </div>
             </div>
@@ -1325,10 +1325,10 @@
                 <a class="footer__logo logo" href="/" title="Home" aria-label="Home">
                     <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
                 </a>
-                <a class="button button-calc visible-mobile" href="javascript:void(0);">
+                <a class="button button-calc visible-mobile" href="#transportation-cost">
                     Расчёт стоимости <span class="icon icon--right-arrow"></span>
                 </a>
-                <a class=" visible-mobile-only" href="javascript:void(0);"><span class="icon icon--right-arrow"></span>
+                <a class=" visible-mobile-only" href="#transportation-cost"><span class="icon icon--right-arrow"></span>
                 </a>
             </div>
         </div>
@@ -1336,11 +1336,14 @@
             <div class="footer__left">
                 <div class="footer__navigation">
                     <ul class="footer__navigation-list">
-                        <li class="footer__navigation-item"><a href="#" class="footer__link">Расчёт стоимости</a></li>
-                        <li class="footer__navigation-item"><a href="#" class="footer__link">Преимущества</a></li>
-                        <li class="footer__navigation-item"><a href="#" class="footer__link">Какие грузы</a></li>
-                        <li class="footer__navigation-item"><a href="#" class="footer__link">Отзывы</a></li>
-                        <li class="footer__navigation-item"><a href="#" class="footer__link">Как мы работаем</a></li>
+                        <li class="footer__navigation-item"><a href="#transportation-cost" class="footer__link">Расчёт
+                                стоимости</a></li>
+                        <li class="footer__navigation-item"><a href="#about" class="footer__link">Преимущества</a></li>
+                        <li class="footer__navigation-item"><a href="#cargo-types" class="footer__link">Какие грузы</a>
+                        </li>
+                        <li class="footer__navigation-item"><a href="#reviews" class="footer__link">Отзывы</a></li>
+                        <li class="footer__navigation-item"><a href="#process" class="footer__link">Как мы работаем</a>
+                        </li>
                     </ul>
                 </div>
 
@@ -1420,7 +1423,7 @@
     <!--—END  FOOTER -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-
+    
 
 </body>
 
