добавление к блокам wow.js и animate

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>JAR-CARGO</title>
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./libs/plugins/animate.min.css">
     <script src="./scripts/main.js" defer></script>
 
 </head>
@@ -125,18 +126,23 @@
             <div class="hero__container container">
                 <div class="hero__content">
                     <div class="hero__header header-block">
-                        <h1 class="hero__title h1"> <span>Срочная доставка </span> тяжёлых
+                        <h1 class="hero__title h1 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
+                            <span>Срочная доставка </span>
+                            тяжёлых
                             и&nbsp;крупногабаритных грузов за&nbsp;24&nbsp;часа</h1>
-                        <p class="hero__subtitle desc">Организация доставки в&nbsp;любую точку России
+                        <p class="hero__subtitle desc wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
+                            Организация доставки
+                            в&nbsp;любую точку России
                             и&nbsp;за&nbsp;рубеж&nbsp;&mdash; быстро, безопасно и&nbsp;без лишних затрат</p>
                     </div>
-                    <a href="#transportation-cost" class="button button-calc">Расчёт стоимости <span
-                            class="icon icon--right-arrow"> <span>
+                    <a href="#transportation-cost" class="button button-calc wow fadeInUp" data-wow-duration="1s"
+                        data-wow-delay="1.5s">Расчёт
+                        стоимости <span class="icon icon--right-arrow"> <span>
                     </a>
                 </div>
             </div>
 
-            <div class="hero__media">
+            <div class="hero__media wow slideInRight" data-wow-duration="1s" data-wow-delay="0s">
                 <video class="hero__video" autoplay muted loop playsinline>
                     <source src="./video/video.mp4" type="video/mp4">
                 </video>
@@ -828,25 +834,25 @@
                 </div>
                 <div class="our-clients__body">
                     <ul class="our-clients__list">
-                        <li class="our-clients__item">
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.15s" data-wow-duration="1s">
                             <h3 class="client_card h3">Строительные
                                 компании</h3>
                         </li>
-                        <li class="our-clients__item">
-                            <h3 class=" client_cardh3">Производственные
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.30s" data-wow-duration="1s">
+                            <h3 class=" client_card h3 ">Производственные
                                 компании</h3>
                         </li>
-                        <li class="our-clients__item">
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.45s" data-wow-duration="1s">
                             <h3 class="client_card h3">Сельское хозяйство и&nbsp;агробизнес</h3>
                         </li>
-                        <li class="our-clients__item">
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.6s" data-wow-duration="1s">
                             <h3 class="client_card h3">Энергетические
                                 компании</h3>
                         </li>
-                        <li class="our-clients__item">
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.75s" data-wow-duration="1s">
                             <h3 class="client_card h3">Торговые и&nbsp;оптовые компании</h3>
                         </li>
-                        <li class="our-clients__item">
+                        <li class="our-clients__item wow fadeInUp" data-wow-delay="0.9s" data-wow-duration="1s">
                             <h3 class="client_card h3">Промышленные
                                 компании</h3>
                         </li>
@@ -1092,7 +1098,7 @@
                         &laquo;под ключ&raquo;, без головной боли для вас.</p>
                 </div>
                 <ul class="work-process__list">
-                    <li class="work-process__item">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.15s" data-wow-duration="1s">
                         <h3 class="work-process__title">Упрощаем логистику</h3>
                         <div class="work-process__description">
                             <p>Авиаперевозчики, как правило, занимаются только транспортировкой с&nbsp;одного аэродрома
@@ -1103,7 +1109,7 @@
                                 Наша компания берёт всю работу и&nbsp;ответственность на&nbsp;себя.</p>
                         </div>
                     </li>
-                    <li class="work-process__item">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.3s" data-wow-duration="1s">
                         <h3 class="work-process__title">Решение юридических и административных вопросов</h3>
                         <div class="work-process__description">
                             <p>Таможенные процедуры, лицензии, разрешения&nbsp;&mdash; это отдельная область,
@@ -1113,7 +1119,7 @@
                                 специфических документов, мы&nbsp;позаботимся об&nbsp;этом заранее.</p>
                         </div>
                     </li>
-                    <li class="work-process__item">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.45s" data-wow-duration="1s">
                         <h3 class="work-process__title">Обеспечим защиту груза, гарантии и&nbsp;надёжность</h3>
                         <div class="work-process__description">
                             <p>Наши специалисты знают, как правильно упаковать и&nbsp;защитить груз, чтобы
@@ -1124,7 +1130,7 @@
                                 Мы&nbsp;страхуем груз и&nbsp;доставку.</p>
                         </div>
                     </li>
-                    <li class="work-process__item">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.6s" data-wow-duration="1s">
                         <h3 class="work-process__title">Экономим ваше время</h3>
                         <div class="work-process__description">
                             <p>Благодаря опыту, мы&nbsp;знаем, как оптимизировать процесс перевозки, сэкономить время,
@@ -1423,8 +1429,17 @@
     <!--—END  FOOTER -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-    
-
+    <script src="./libs/plugins/wow.js"></script>
+    <script>
+        wow = new WOW({
+            boxClass: 'wow', // default
+            animateClass: 'animated', // default
+            offset: 0, // default
+            mobile: true, // default
+            live: true // default
+        })
+        wow.init();
+    </script>
 </body>
 
 </html>
