правки с дизайнером, добавление анимаций кнопок, ховера с кнопкой, удаление модалок

--- a/index.html
+++ b/index.html
@@ -503,65 +503,101 @@
                             <div class="cargo-types__item-description">
                                 <p>Специальные условия для тяжёлых грузов, включая
                                     оформление спец. рейсов до получателя</p>
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7"
+                                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-fancybox data-src="#modal-1" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-fancybox data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                     <li class="cargo-types__item">
                         <div class="cargo-types__content">
                             <h3 class="cargo-types__item-title">Строительная техника и оборудование</h3>
                             <span class="cargo-types__item-tag">За 24 часа</span>
                             <div class="cargo-types__item-description">
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-src="#modal-2" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                     <li class="cargo-types__item">
                         <div class="cargo-types__content">
                             <h3 class="cargo-types__item-title">Продукты</h3>
                             <span class="cargo-types__item-tag">За 24 часа</span>
                             <div class="cargo-types__item-description">
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-src="#modal-3" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                     <li class="cargo-types__item">
                         <div class="cargo-types__content">
                             <h3 class="cargo-types__item-title">Медикаменты</h3>
                             <span class="cargo-types__item-tag">За 24 часа</span>
                             <div class="cargo-types__item-description">
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-src="#modal-4" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                     <li class="cargo-types__item">
                         <div class="cargo-types__content">
                             <h3 class="cargo-types__item-title">Животные и&nbsp;цветы</h3>
                             <span class="cargo-types__item-tag">За 24 часа</span>
                             <div class="cargo-types__item-description">
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-src="#modal-5" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                     <li class="cargo-types__item">
                         <div class="cargo-types__content">
                             <h3 class="cargo-types__item-title">Различное оборудование</h3>
                             <span class="cargo-types__item-tag">За 24 часа</span>
                             <div class="cargo-types__item-description">
-                                <span class="icon icon--right-arrow"> </span>
+                                <div class="icon-arrow to-right">
+                                    <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
                             </div>
                         </div>
-                        <a class="stretched-link" data-src="#modal-6" href="javascript:void(0);"></a>
+                        <a class="stretched-link" data-src="#modal" href="javascript:void(0);"></a>
                     </li>
                 </ul>
 
-                <!-- Modal windows -->
-                <div id="modal-1" class="cargo-types__modal modal">
+                <!-- Modal window -->
+                <div id="modal" class="cargo-types__modal modal">
                     <div class="cargo-types__wrapper container">
                         <div class=" cargo-types__modal-inner ">
                             <ol class="cargo-types__modal-list  ">
@@ -775,52 +811,7 @@
                     </div>
                 </div>
 
-                <div id="modal-2" class="cargo-types__modal modal">
-                    <div class="cargo-types__wrapper container">
-                        <div class=" cargo-types__modal-inner ">
-                            <h2>Строительная техника и оборудование</h2>
-                            <p>Подробное описание строительной техники и оборудования.</p>
-                        </div>
-                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
-                    </div>
-                </div>
-                <div id="modal-3" class="cargo-types__modal modal">
-                    <div class="cargo-types__wrapper container">
-                        <div class=" cargo-types__modal-inner ">
-                            <h2>Продукты</h2>
-                            <p>Подробное описание перевозки продуктов.</p>
-                        </div>
-                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
-                    </div>
-                </div>
-                <div id="modal-4" class="cargo-types__modal modal">
-                    <div class="cargo-types__wrapper container">
-                        <div class=" cargo-types__modal-inner ">
-                            <h2>Медикаменты</h2>
-                            <p>Подробное описание перевозки медикаментов.</p>
-                        </div>
-                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
-                    </div>
-                </div>
-                <div id="modal-5" class="cargo-types__modal modal">
-                    <div class="cargo-types__wrapper container">
-                        <div class=" cargo-types__modal-inner ">
-                            <h2>Животные и цветы</h2>
-                            <p>Подробное описание перевозки животных и цветов.</p>
-                        </div>
-                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
-                    </div>
-                </div>
-                <div id="modal-6" class="cargo-types__modal modal">
-                    <div class="cargo-types__wrapper container">
-                        <div class=" cargo-types__modal-inner ">
-                            <h2>Различное оборудование</h2>
-                            <p>Подробное описание перевозки различного оборудования.</p>
-                        </div>
-                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
-                    </div>
-                </div>
-                <!-- Modal windows-->
+                <!-- Modal window-->
             </div>
         </section>
         <!-- END SECTION CARGO TYPES -->
@@ -1080,8 +1071,20 @@
                     </div>
                     <div class=" container">
                         <div class="workflow-gallery__nav">
-                            <img class="workflow-gallery__prev" src="./icons/prev.svg" alt="">
-                            <img class="workflow-gallery__next" src="./icons/next.svg" alt="" />
+                            <div class="icon-arrow to-left">
+                                <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M20 7L1 7M1 7L7.38461 13M1 7L7.38462 0.999999" stroke="#0063C7"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                            <div class="icon-arrow to-right">
+                                <svg width="21" height="14" viewBox="0 0 21 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M1 7H20M20 7L13.6154 1M20 7L13.6154 13" stroke="#0063C7" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -1098,7 +1101,7 @@
                         &laquo;под ключ&raquo;, без головной боли для вас.</p>
                 </div>
                 <ul class="work-process__list">
-                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.15s" data-wow-duration="1s">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="1s" data-wow-duration="1s">
                         <h3 class="work-process__title">Упрощаем логистику</h3>
                         <div class="work-process__description">
                             <p>Авиаперевозчики, как правило, занимаются только транспортировкой с&nbsp;одного аэродрома
@@ -1109,7 +1112,7 @@
                                 Наша компания берёт всю работу и&nbsp;ответственность на&nbsp;себя.</p>
                         </div>
                     </li>
-                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.3s" data-wow-duration="1s">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="1.15s" data-wow-duration="1s">
                         <h3 class="work-process__title">Решение юридических и административных вопросов</h3>
                         <div class="work-process__description">
                             <p>Таможенные процедуры, лицензии, разрешения&nbsp;&mdash; это отдельная область,
@@ -1119,7 +1122,7 @@
                                 специфических документов, мы&nbsp;позаботимся об&nbsp;этом заранее.</p>
                         </div>
                     </li>
-                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.45s" data-wow-duration="1s">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="1.30s" data-wow-duration="1s">
                         <h3 class="work-process__title">Обеспечим защиту груза, гарантии и&nbsp;надёжность</h3>
                         <div class="work-process__description">
                             <p>Наши специалисты знают, как правильно упаковать и&nbsp;защитить груз, чтобы
@@ -1130,7 +1133,7 @@
                                 Мы&nbsp;страхуем груз и&nbsp;доставку.</p>
                         </div>
                     </li>
-                    <li class="work-process__item wow fadeInUp" data-wow-delay="0.6s" data-wow-duration="1s">
+                    <li class="work-process__item wow fadeInUp" data-wow-delay="1.45s" data-wow-duration="1s">
                         <h3 class="work-process__title">Экономим ваше время</h3>
                         <div class="work-process__description">
                             <p>Благодаря опыту, мы&nbsp;знаем, как оптимизировать процесс перевозки, сэкономить время,
@@ -1334,7 +1337,8 @@
                 <a class="button button-calc visible-mobile" href="#transportation-cost">
                     Расчёт стоимости <span class="icon icon--right-arrow"></span>
                 </a>
-                <a class=" visible-mobile-only" href="#transportation-cost"><span class="icon icon--right-arrow"></span>
+                <a class=" visible-mobile-only" href="#transportation-cost">
+                    <span class="icon icon--right-arrow"></span>
                 </a>
             </div>
         </div>
@@ -1422,7 +1426,7 @@
                 © 2025
             </div>
             <div class="footer__copyright">
-                Разработано в <a href="#" class="footer__link">VBI</a>
+                Разработано в <a href="https://vbi.ru" class="footer__link">VBI</a>
             </div>
         </div>
     </footer>
@@ -1432,11 +1436,11 @@
     <script src="./libs/plugins/wow.js"></script>
     <script>
         wow = new WOW({
-            boxClass: 'wow', // default
-            animateClass: 'animated', // default
-            offset: 0, // default
-            mobile: true, // default
-            live: true // default
+            boxClass: 'wow',
+            animateClass: 'animated',
+            offset: 0,
+            mobile: true,
+            live: true
         })
         wow.init();
     </script>
